--- a/Pass_mgr.csproj
+++ b/Pass_mgr.csproj
@@ -6,6 +6,24 @@
 		<Nullable>enable</Nullable>
 		<UseWindowsForms>true</UseWindowsForms>
 		<ImplicitUsings>enable</ImplicitUsings>
+
+		
+		<PublishSingleFile>true</PublishSingleFile>
+		
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+
+		
+		
+		
+		
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <DebugType>embedded</DebugType>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>embedded</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
